# FastAPI_REF

./: .env_example  Dockerfile  README.MD  alembic.ini  docker-compose.yaml  pyproject.toml
src/: config.py  main.py
src/api/auth/: __init__.py  models.py  routers.py  services.py
src/api/ref/: __init__.py  routers.py  services.py
src/api/test_pkg/: __init__.py  routers.py  services.py
src/api/user/: __init__.py  models.py  routers.py  schemas.py  services.py
src/api/v1/: __init__.py  routers.py
src/api/v1/auth/: __init__.py  routers.py  schemas.py  services.py
src/api/v1/ref/: __init__.py  routers.py  services.py
src/api/v1/user/: __init__.py  models.py  routers.py  schemas.py  services.py
src/auth/user/: models.py  schemas.py
src/core/: __init__.py  settings.py
src/database/: __init__.py  database.py  redis_connect.py
src/database/migrations/: env.py
src/database/migrations/versions/: aa0b012765ef_create_table.py  c0edcf9c22b2_create_table.py
src/database/repositories/: __init__.py  ref_repo.py  user_repo.py
src/security/: __init__.py  auth_security.py  jwt_security.py
